--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
       <section id="projects" class="main-section">
         <h2>Projects</h2>
         <div id="projects-content">
-            <a href="https://codepen.io/FreeCodeCamp/pen/NNvBQW" class="project-tile"><img
-                    src="https://cloud.githubusercontent.com/assets/15967809/17642794/d084d718-6171-11e6-83fa-ede5d0a67ad2.png"
-                    alt="tribute page preview">
-                Tribute page</a>
-            <a href="https://codepen.io/FreeCodeCamp/pen/ONjoLe" class="project-tile"><img
-                    src="https://cloud.githubusercontent.com/assets/15967809/17642771/7cd6a0c4-6171-11e6-87fb-915f6084d104.png"
-                    alt="random quote machine preview">Random quote machine</a>
+            <a href="https://github.com/sandy-266/webmonkAssignments" class="project-tile"><img
+                    src="./images/survey form.jpeg"
+                    alt="survey form preview">
+                Survey Form</a>
+            <a href="https://sandy-266.github.io/portfolio/" class="project-tile"><img
+                    src="./images/portfolio.png"
+                    alt="random quote machine preview">My Portfolio</a>
             <a href="https://codepen.io/FreeCodeCamp/pen/PNKdjo" class="project-tile"><img
                     src="https://cloud.githubusercontent.com/assets/15967809/17642772/7d02406c-6171-11e6-8c79-40a2933163dc.png"
                     alt="javascript calculator preview">JavaScript calculator</a>
