--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
        <article class="column" >
          <img src="./images/myself.JPG" alt="profile">
         <p style="font-size: 15px; font-weight: inherit;">
-          I am a full stack web developer originated from Rayagada, Odisha. I am also learning more about the full stack 
+           A full stack web developer originated from Rayagada, Odisha. I am also learning more about the full stack 
           web development from Techbairn. I am currently pursuing my Bachelors in Electronics and Computer Science Engineering
-          from KiiT University from 2018. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio sit illum ducimus dicta
-          voluptatem beatae enim minus odit inventore? Repellendus repudiandae laudantium vero fugiat ad possimus ipsam omnis quo! Harum.
+          from KiiT University from 2018. This portfolio can help in bringing an insight about me and my educational qualifications 
+          along with recent projects. 
         </p>
       </article>
        <article class="column" id="skills" >
@@ -95,7 +95,7 @@
                 Survey Form</a>
             <a href="https://sandy-266.github.io/portfolio/" class="project-tile"><img
                     src="./images/portfolio.png"
-                    alt="random quote machine preview">My Portfolio</a>
+                    alt="portfolio preview">My Portfolio</a>
             <a href="https://codepen.io/FreeCodeCamp/pen/PNKdjo" class="project-tile"><img
                     src="https://cloud.githubusercontent.com/assets/15967809/17642772/7d02406c-6171-11e6-8c79-40a2933163dc.png"
                     alt="javascript calculator preview">JavaScript calculator</a>
@@ -130,10 +130,10 @@
         <h2 style="color: black;">Let's Work Together</h2>
         <p style="color: black;">How do you take your coffee?</p>
         <div id="contacts-content">
-            <div id="fcbk"><a href="https://facebook.com/freecodecamp" target="_blank"><i class="fab fa-facebook-square icons"></i></a></div>
-            <div id="github"><a href="https://github.com/freecodecamp" target="_blank" id="profile-link"><i class="fab fa-github-square icons"></i></a>
+            <div id="fcbk"><a href="https://www.facebook.com/sai.patnana.547/" target="_blank"><i class="fab fa-facebook-square icons"></i></a></div>
+            <div id="github"><a href="https://github.com/sandy-266" target="_blank" id="profile-link"><i class="fab fa-github-square icons"></i></a>
             </div>
-            <div id="twitter"><a href="https://twitter.com/freecodecamp" target="_blank"><i class="fab fa-twitter-square icons"></i></a></div>
+            <div id="twitter"><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square icons"></i></a></div>
             <div id="email"><a href="mailto:psaisandesh266@gmail.com" target="_blank"><i class="fas fa-envelope-open-text icons"></i></a></div>
             <div id="tel"><a href="tel:555-555-5555" target="_blank"><i class="fas fa-phone-square-alt icons"></i></a></div>
         </div>
